# Aether

./: CMakeLists.txt  LICENSE.md  README.md
aether-core/: CMakeLists.txt
aether-core/api/: CMakeLists.txt
aether-core/api/common/: HttpMethod.hpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp
aether-core/api/config/: ApiConfig.hpp
aether-core/api/controllers/: StatusController.cpp  StatusController.hpp
aether-core/api/dto/: StatusResponse.hpp
aether-core/api/services/: StatusService.cpp  StatusService.hpp
aether-core/api/transport/rest/: HttpServer.cpp  HttpServer.hpp  HttpSessions.cpp  HttpSessions.hpp  RouteRegistry.cpp  RouteRegistry.hpp  Router.cpp  Router.hpp  RouterDelete.cpp  RouterGet.cpp  RouterGet.hpp  RouterPost.cpp  RouterPut.cpp
aether-core/apps/: CMakeLists.txt
aether-core/apps/aetherd/: CMakeLists.txt
aether-core/apps/aetherd/include/: daemon.hpp
aether-core/apps/aetherd/src/: daemon.cpp
aether-core/apps/cli/include/: cli_app.hpp
aether-core/apps/cli/src/: cli_app.cpp
aether-core/core/: CMakeLists.txt
aether-core/core/database/src/: ConnectionPool.cpp  PostgresDriver.cpp
aether-core/core/network/: SessionManager.hpp  TcpConnection.cpp  TcpConnection.hpp
aether-core/core/utils/: DateTime.cpp  DateTime.hpp  logger.cpp
aether-core/modules/ModulePoseidon/: CMakeLists.txt
aether-core/modules/ModulePoseidon/Schedule/: ScheduleService.cpp
aether-core/modules/ModulePoseidon/config/: DatabaseConfig.hpp
aether-core/modules/ModulePoseidon/include/: PoseidonService.hpp
aether-core/modules/ModulePoseidon/src/: PoseidonService.cpp
aether-core/modules/ModuleTest/: CMakeLists.txt
aether-core/protocols/: CMakeLists.txt
aether-core/protocols/aether/: CMakeLists.txt
aether-core/protocols/aether/common/: IProtocolHandler.hpp  IResponseChannel.hpp
aether-core/protocols/aether/src/: dummy.cpp
aether-web/: .env.dev  frontend-build-setup.md  package.json
aether-web/assets/styles/: app.css
aether-web/assets/styles/pages/: _base_old.css  _login_old.css
aether-web/public/js/: config.js
aether-web/public/js/services/: api_status.js  atuador_control.js
aether-web/src/Controller/: DashboardController.php  ModuloController.php
aether-web/src/Entity/: User.php
aether-web/src/Service/Horus/: HorusStatus.php  HorusStatusProvider.php
aether-web/src/Service/Poseidon/: PoseidonDevice.php  PoseidonDeviceProvider.php
aether-web/templates/: base.html.twig
aether-web/templates/home/: index.html.twig
aether-web/templates/modulos/: horus.html.twig  poseidon.html.twig
aether-web/translations/: security.pt_BR.yaml
apps/aetherd/: CMakeLists.txt
apps/aetherd/include/: daemon.hpp
apps/aetherd/include/commands/: cmd_core_stop.hpp
apps/aetherd/src/: daemon.cpp  main.cpp
apps/aetherd/src/commands/: cmd_core_start.cpp
apps/cli/: CMakeLists.txt
apps/cli/include/: cli_app.hpp  utils.hpp
apps/cli/src/: cli_app.cpp  main.cpp  utils.cpp
apps/cli/src/commands/: cmd_help.cpp  cmd_version.cpp
core/: CMakeLists.txt
core/database/include/: ConnectionHandle.hpp  ConnectionPool.hpp  PostgresDriver.hpp
core/database/src/: ConnectionHandle.cpp
core/eventbus/include/: Event.hpp  EventBus.hpp  EventTypes.hpp  IModule.hpp
core/eventbus/src/: EventBus.cpp
core/network/: ProtocolRouter.hpp  SessionManager.cpp  TcpConnection.cpp  TcpConnection.hpp  TcpResponseChannel.cpp  TcpResponseChannel.hpp  TcpServer.cpp  TcpServer.hpp
core/network/session/: ConnSession.hpp
core/tests/: moduleTest.cpp  moduleTest.hpp
core/utils/: logger.hpp
core/utils/src/: logger.cpp
database/core/functions/: touch_updated_at.sql
database/core/migrations/aether_core/: 001_create_table_ntch_network_connection_history.sql  002_create_table_amod_aether_module.sql  003_add_device_external_id_to_device.sql
database/core/migrations/poseidon/: 001_create_table_devc_device.sql  002_create_table_styp_sensor_type.sql  003_create_table_sens_sensor.sql  004_create_table_dsrd_data_sensor_received.sql  (+6 more)
database/core/structure/: 001_create_roles.sql  002_create_schema_aether_core.sql  003_create_schema_poseidon.sql  004_create_role_poseidon_application.sql
database/migrations/poseidon/: 010_add_run_now_to_jcrs_job_cron_schedule.sql
database/web/migrations/: 001_create_user_table.sql  002_seed_create_user_admin.sql
database/web/triggers/: trg_user_updated_at.sql
docs/: README.md
docs/api/deploy/: API_ARCHITECTURE.md  API_CODE_REFERENCE.md  API_REST.md  API_USAGE.md  CHANGELOG.md  QUICKSTART.md  README.md  VISUAL_SUMMARY.md
docs/api/methods/: status.md
docs/core/: BuildAndRun.md
docs/web/: Deploy.md
docs/web/frontend/: DesignSystem.md
modules/: CMakeLists.txt
modules/ModulePoseidon/: CMakeLists.txt
modules/ModulePoseidon/Schedule/: ScheduleService.cpp  ScheduleService.hpp
modules/ModulePoseidon/config/: DatabaseConfig.hpp
modules/ModulePoseidon/include/: PoseidonMain.hpp  PoseidonService.hpp
modules/ModulePoseidon/src/: PoseidonMain.cpp  PoseidonService.cpp
modules/ModuleTest/: CMakeLists.txt
modules/ModuleTest/include/: ModuleTest.hpp
modules/ModuleTest/src/: ModuleTest.cpp
modules/ModuleTest/storage/: DatabaseConfig.hpp
protocols/aether/: CMakeLists.txt
protocols/aether/common/: IProtocolHandler.hpp  ModuleId.hpp  ProtocolRouter.hpp
protocols/aether/include/: CommandType.hpp  Packet.hpp  PacketBuilder.hpp  Parser.hpp
protocols/aether/src/: PacketBuilder.cpp  Parser.cpp
web/: .env  package-lock.json  postcss.config.js  readme.md  tailwind.config.js
web/assets/styles/: app.css
web/database/functions/: trg_user_updated_at.sql
web/database/migrations/: 00000001_create_user_table.sql  00000002_seed_create_user_admin.sql
web/database/triggers/: touch_updated_at.sql
web/public/css/: home.css  login.css
web/public/js/: home.js  login.js
web/src/Controller/: SecurityController.php
web/src/Repository/: UserRepository.php
web/src/Security/: LoginFormAuthenticator.php  UserChecker.php
web/templates/: base.html.twig
web/templates/home/: index.html.twig
web/templates/security/: login.html.twig
(+4 files in other folders)
